# whats-eat-ai

./: .gitignore  README.md  pyproject.toml
whats-eat-ai/: food_classification.py  image_resize.py  main.py
